# linter

./: .gitignore  .linterconfig.yaml  CMakeLists.txt  README.md  ascii_art.py  commit-msg  cpplint.py  git-hooks.py  git_hooks.py  init-git-hooks.py  linter.py  linterconfig.yaml.example  linterconfig.yaml_example  package.xml  pre-commit  pylint.rc  run_checks.py  setup_linter.sh
default/: modified_cpplint.py  modified_old_cpplint.py  new_cpplint.py  old_cpplint.py  pylint.rc
